# Biomethod

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_biomethod.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tool_addition.md
my_analysis/: README.md  requirements.txt
my_analysis/envs/: environment.yml
my_analysis/notebooks/: exploratory_analysis.ipynb
my_analysis/scripts/: 01_preprocessing.py  02_alignment.py  03_quantification.py  04_differential_expression.R  05_enrichment_analysis.R
src/biomethod/: __init__.py  cli.py
src/biomethod/core/: __init__.py  analyzer.py  models.py  report.py
src/biomethod/data/: parameter_descriptions.yaml  tools_database.yaml
src/biomethod/detectors/: __init__.py  environment.py  version.py
src/biomethod/generators/: __init__.py  citations.py  prose.py
src/biomethod/generators/templates/: bioinformatics.j2  generic.j2  nature.j2
src/biomethod/parsers/: __init__.py  base.py  jupyter_parser.py  nextflow_parser.py  python_parser.py  r_parser.py  snakemake_parser.py
src/biomethod/utils/: __init__.py  helpers.py
tests/: __init__.py  test_generators.py  test_parsers.py  test_smoke.py
tests/fixtures/: sample_analysis.R  sample_pipeline.nf  sample_rnaseq.py
